# autoprodaune-1.5

./: .env.example  .env.example.clean  .env.microservices.example  .env.production  .gitattributes  .gitignore  ACTION_REQUIRED.md  ACTUAL_VS_CLAIMED_ANALYSIS.md  ADMIN_API_DOCUMENTATION.md  ADMIN_COMPLETE_TESTING_REPORT.md  ADMIN_COMPONENT_DEPENDENCIES.md  ADMIN_DASHBOARD_DEVELOPMENT_PLAN_AND_STATUS.md  ADMIN_DASHBOARD_IMPLEMENTATION_COMPLETE.md  ADMIN_DASHBOARD_MASTER_PLAN.md  ADMIN_DASHBOARD_P0_IMPLEMENTATION_COMPLETE.md  ADMIN_DASHBOARD_STATUS.md  ADMIN_DATABASE_REQUIREMENTS.md  ADMIN_ENDPOINTS_COMPLETE_LIST.md  ADMIN_FEATURE_IMPLEMENTATION_PLAN.md  ADMIN_FRONTEND_COMPONENTS_ANALYSIS.md  ADMIN_IMPLEMENTATION_PRIORITY_MATRIX.md  ADMIN_INTEGRATION_TEST_PLAN.md  ADMIN_MOCK_DATA_REMOVAL_PLAN.md  ADMIN_PANEL_COMPLETE_AUDIT.md  ALL_SERVICES_SUMMARY.md  API_IMPLEMENTATION_STATUS.md  API_KEYS_STATUS.md  API_ROUTES_COMPLETE_MAP.md  AUTOPRO_VIBECODE_IMPLEMENTATION_PLAN.md  BROWSER_VERIFICATION_CHECKLIST.md  CHATGPT_CONNECTOR_GUIDE.md  CHATGPT_SETUP_COMPLETE.md  CHATGPT_SETUP_FINAL.md  CHAT_SUMMARY_SESSION_TODAY.md  CHAT_SUMMARY_VIDEO_GENERATION.md  CI_CD_FIXES_VERIFICATION_COMPLETE.md  CI_FIXES_APPLIED_GPT_PATCHES.md  CLAUDE_COMPLETE_FIX_TASKS.md  CLIENT_DEMO_GUIDE.md  CLOUDFLARE_R2_SETUP.md  (+137 more)
autopro-handoff-complete/backend/: __init__.py  main.py  pyproject.toml  requirements.txt
autopro-handoff-complete/backend/core/: database.py  monitoring.py
autopro-handoff-complete/backend/middleware/: rate_limit.py
autopro-handoff-complete/backend/models/: financial.py
autopro-handoff-complete/backend/routes/: advanced_video.py  automation.py  content.py  conversion.py  health.py  (+9 more)
(+761 files in other folders)
